[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "raja_aita"
version = "0.0.1"
authors = [
  { name="Stefan Walluhn", email="stefan@neuland.io" },
]
description = "Track and visualize device usage"
readme = "README.md"
dependencies = [
    "fastapi",
    "fastapi-cli",
    "pydantic",
    "pydantic-settings",
    "tinydb",
]

[project.optional-dependencies]
client = [
    "requests",
]
test = [
    "raja_aita[client]",
    "flake8",
    "flake8-bugbear",
    "freezegun",
    "httpx",
    "mypy",
    "pytest",
    "requests-mock",
    "types-requests",
]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[[tool.mypy.overrides]]
module = ["dbus.*"]
follow_untyped_imports = true
