[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "raja_aita"
version = "0.0.1"
authors = [
  { name="Stefan Walluhn", email="stefan@neuland.io" },
]
description = "Track and visualize device usage"
readme = "README.md"
dependencies = [
    "fastapi",
    "fastapi-cli",
    "pydantic",
    "pydantic-settings",
    "tinydb",
]

[project.scripts]
raja-client = "raja_aita.client.cli:main"

[project.optional-dependencies]
client = [
    "PyGObject",
    "click",
    "dbus-python",
    "requests",
]
test = [
    "raja_aita[client]",
    "flake8",
    "flake8-bugbear",
    "freezegun",
    "httpx",
    "mypy",
    "pytest",
    "requests-mock",
    "types-requests",
]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.mypy]
plugins = ['pydantic.mypy']
strict = true
exclude = [
    "cli.py$",
]

[[tool.mypy.overrides]]
module = ["dbus.*"]
follow_untyped_imports = true
